# CoordinateConversion

./: .gitignore  readme
cpp/: CMakeLists.txt
cpp/src/: CoordinateConversion.hpp  main.cpp
csharp/conversion/: conversion.sln
csharp/conversion/conversion/: CoordinateConversion.cs  Program.cs  conversion.csproj
csharp/conversion/conversion/Properties/: AssemblyInfo.cs
py/: CoordinateConversion.py  test.py
